# ComfyUI-8iPlayer

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
assets/: kartellogo.avif
nodes/: ImageNode.py
web/javascript/: 3d_8i.js  3d_mixlab.js  DashPlayer-Dn48qdmH.js.js  DashPlayer.js  RGBELoader.js  app_8i.js  chat.js  checkVersion_mixlab.js  common.js  p5.js  saveTripoSrMesh.js  ui_mixlab.js  utils_mixlab.js  visualization.js  volcap.js
webApp/: index.html  threeVisualizer.html
webApp/javascript/: command.js
webApp/lib/: DashPlayer.js  DashPlayer.module.js  polyfill.js
workflow_examples/: workflow-8i-flux-v01.json  workflow-8i-wan-fun-1.3b-ChatGpt-v01.json  workflow-8i-wan-fun-1.3b-v01.json  workflow-8i-wan-vace-1.3b-ChatGpt-v01.json
